objects/TestHarnessData__mdt.object
<CustomObject>
    <description>Relating test data to business processes for use with testing Flow (and Process Builder) to specific data sets for tests</description>
    <fields>
        <fullName>Field_Names__c</fullName>
        <description>Comma separated name of all the fields in the CSV file</description>
        <label>Field Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Rows__c</fullName>
        <description>Number of rows in the CSV file at the time it was generated</description>
        <label>Number of Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Data_Index__c</fullName>
        <description>The index start value for Sobject IDs (for relating data via test.loadData)</description>
        <label>Object Data Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Priority_Index__c</fullName>
        <label>Object Priority Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>API Name</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Test data is associated with the initial data silo creation, or it is part of an update operation based on Flow (and Process Builder) criteria, or it is part of the final data validation process.</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                    <default>true</default>
                    <label>Create</label>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_Resource_Name__c</fullName>
        <label>Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Resource_Object__c</fullName>
        <description>An object with a related static resource for a given test harness</description>
        <inlineHelpText>static resource name should be ObjectAPIName -- moved to text field.</inlineHelpText>
        <label>Static Resource Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>TestHarnesses</relationshipLabel>
        <relationshipName>TestHarnesses</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TestHarness__c</fullName>
        <label>TestHarness</label>
        <referenceTo>TestHarness__mdt</referenceTo>
        <relationshipLabel>TestHarnessData</relationshipLabel>
        <relationshipName>TestHarnessData</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>TestHarnessData</label>
    <pluralLabel>TestHarnessData</pluralLabel>
</CustomObject>